# tetris

./: .gitignore  README.md  meson.build  tetris.sln
glsl test/: shader.frag
include/: Binds.h  Grid.h  Piece.h  SFX.h  StatCallback.h  StatsUI.h  Textures.h  common.h
resources/glsl test/: shader.frag
resources/shaders/: bloom_fragment.glsl  bloom_vertex.glsl  shader.frag
src/: Binds.cpp  Grid.cpp  Main.cpp  Piece.cpp  SFX.cpp  StatsUI.cpp  Textures.cpp  meson.build
tetris/: Binds.cpp  Binds.h  Grid.cpp  Grid.h  Label.h  Main.cpp  Piece.cpp  Piece.h  SFX.cpp  SFX.h  Stat.h  StatCallback.h  StatsUI.cpp  StatsUI.h  Textures.cpp  Textures.h  common.h  tetris.vcxproj  tetris.vcxproj.filters
tetris/Debug/: tetris.exe.recipe  tetris.ilk  vc142.idb
tetris/Debug/tetris.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tetris.lastbuildstate
tetris/Shaders/: bloom_fragment.glsl  bloom_vertex.glsl
tetris/x64/Debug/: tetris.exe.recipe  tetris.ilk  vc142.idb
tetris/x64/Debug/tetris.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tetris.lastbuildstate
